add  Ws controller